# gst-video-list-caps

./: .gitmodules  meson.build
src/: list-caps.cpp
submodules/: cutil  cutil-macros  gstreamer-utils
